--- a/Tema1_AccesoBDRelacionales/EstelaDeVega_EjercicioFormulario/pom.xml
+++ b/Tema1_AccesoBDRelacionales/EstelaDeVega_EjercicioFormulario/pom.xml
@@ -47,6 +47,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
