crear el diseño de la aplicacion, insertar en el controller los metodos, crear la clase coche y añadir la foto de la aplicacion

--- a/Tema4_MapeoObjetoRelacional_Hibernate/PracticaHibernate_CRUDCoches/EstelaDeVega_CrudCochesHibernate/pom.xml
+++ b/Tema4_MapeoObjetoRelacional_Hibernate/PracticaHibernate_CRUDCoches/EstelaDeVega_CrudCochesHibernate/pom.xml
@@ -70,7 +70,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                org.esteladevega_crudcocheshibernate/org.esteladevega_crudcocheshibernate.HelloApplication
+                                org.esteladevega_crudcocheshibernate/org.esteladevega_crudcocheshibernate.App
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
