--- a/Tema4_MapeoObjetoRelacional_Hibernate/MultiDBManagerFX/pom.xml
+++ b/Tema4_MapeoObjetoRelacional_Hibernate/MultiDBManagerFX/pom.xml
@@ -21,6 +21,13 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>9.0.0</version>
         </dependency>
+        <!--DEPENDENCIA DE HIBERNATE -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.9.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
