--- a/Tema4_MapeoObjetoRelacional_Hibernate/MultiDBManagerFX/pom.xml
+++ b/Tema4_MapeoObjetoRelacional_Hibernate/MultiDBManagerFX/pom.xml
@@ -28,6 +28,19 @@
             <version>5.6.9.Final</version>
         </dependency>
 
+        <!-- DEPENDENCIA DE MongoDB MANAGER -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.12.11</version>
+        </dependency>
+        <!-- DEPENDENCIA DE Gson A OBJETO DE JAVA -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
