--- a/Tema5_API/Practica_APIyOpenAPI_Swagger/EstelaDeVega_PracticaAPI/pom.xml
+++ b/Tema5_API/Practica_APIyOpenAPI_Swagger/EstelaDeVega_PracticaAPI/pom.xml
@@ -31,6 +31,15 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<!-- DEPENDENCIA DE LOMBOK
+			GENERA GET, SET, toString() Y CONSTRUCTORES
+			-->
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<!-- <optional/> Removed -->
+			<version>1.18.30</version> <!-- Added -->
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
