añadir las propiedades para la conexion a la base de datos

--- a/Tema5_API/Practica_APIyOpenAPI_Swagger/EstelaDeVega_PracticaAPI/src/main/resources/application.properties
+++ b/Tema5_API/Practica_APIyOpenAPI_Swagger/EstelaDeVega_PracticaAPI/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=EstelaDeVega_PracticaAPI
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/GestionHotel
+spring.datasource.username=root
+spring.datasource.password=toor
+# PUERTO EN EL QUE SE EJECUTARA EL SERVICIO
+server.port=9999
+# HABILITAR/DESHABILITAR LA DOCUMENTACION DE LA API EN SWAGGER (API-DOCS - SWAGGER-UI)
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/doc/swagger-ui.html
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# TE CREA LA BASE DE DATOS CADA VEZ QUE SE ABRA LA APLICACION
+# spring.jpa.hibernate.ddl-auto=create
+# -- EXTRA: CARGAR DATOS AUTOMATICAMENTE AL INICIAR EL PROGRAMA --
+# ESPECIFICA UN ARCHIVO PARA CARGAR LOS DATOS DESDE UN FICHERO AL INICIO
+# spring.sql.init.mode=always
+# ESPERA A QUE SE INICIE LA BASE DE DATOS ANTES DE REALIZAR OTRAS OPERACIONES
+# spring.jpa.defer-datasource-initialization=true
