quitar la linea comentada de crear la base de datos al abrir la aplicacion

--- a/Tema5_API/Practica_APIyOpenAPI_Swagger/EstelaDeVega_PracticaAPI/src/main/resources/application.properties
+++ b/Tema5_API/Practica_APIyOpenAPI_Swagger/EstelaDeVega_PracticaAPI/src/main/resources/application.properties
@@ -11,7 +11,7 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/doc/swagger-ui.html
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # TE CREA LA BASE DE DATOS CADA VEZ QUE SE ABRA LA APLICACION
-# spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 # -- EXTRA: CARGAR DATOS AUTOMATICAMENTE AL INICIAR EL PROGRAMA --
 # ESPECIFICA UN ARCHIVO PARA CARGAR LOS DATOS DESDE UN FICHERO AL INICIO
 # spring.sql.init.mode=always
